infra/k8s/base/api-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api-server
  ports:
    - port: 8080
      targetPort: 8080
